# Poolballaim

./: README.md  gradlew  gradlew.bat  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/ghost/: GhostBall.cpp  GhostBall.h
app/src/main/cpp/mirror/: MirrorTable.cpp  MirrorTable.h
app/src/main/cpp/reflection/: ReflectionEngine.cpp  ReflectionEngine.h
app/src/main/cpp/solver/: TrajectorySolver.cpp  TrajectorySolver.h
app/src/main/cpp/vector/: Vector2D.cpp  Vector2D.h
app/src/main/java/com/pool/aim/: App.kt  MainActivity.kt
app/src/main/java/com/pool/aim/calibration/: CalibrationController.kt  TableBounds.kt  TableBoxView.kt
app/src/main/java/com/pool/aim/control/: Control.kt  Helper.kt
app/src/main/java/com/pool/aim/geometry/: GeometryBridge.kt  Vector2.kt
app/src/main/java/com/pool/aim/input/: GestureHandler.kt  InputController.kt
app/src/main/java/com/pool/aim/marker/: MarkerController.kt  MarkerModel.kt  MarkerView.kt
app/src/main/java/com/pool/aim/menu/: MenuController.kt  OverlayMenu.kt  SliderControls.kt
app/src/main/java/com/pool/aim/overlay/: OverlayButton.kt  OverlayManager.kt  OverlayService.kt
app/src/main/java/com/pool/aim/renderer/: AimView.kt  GhostBallRenderer.kt  PocketRenderer.kt  TrajectoryRenderer.kt
app/src/main/res/drawable/: floating_button.xml  marker_red.xml  marker_white.xml
app/src/main/res/layout/: activity_main.xml  overlay_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
(+4 files in other folders)
